--- a/index.html
+++ b/index.html
@@ -5,138 +5,136 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SAAD $SQ8</title>
   <style>
-    :root {
-      --desert: #f0d58e;
-      --sand: #eacb78;
-      --brown: #8c5b2a;
+    :root{
+      --desert:#f0d58e;
+      --sand:#eacb78;
+      --brown:#8c5b2a;
       --dapp-w: 40vw;
       --dapp-h: 78vh;
     }
 
-    * { box-sizing: border-box; }
-    html {
-      scroll-snap-type: y mandatory;
-      overflow-y: scroll;
-      scroll-padding-top: 40px;
+    *{ box-sizing:border-box }
+    html{
+      scroll-snap-type:y mandatory;
+      overflow-y:scroll;
+      scroll-padding-top:40px;
     }
-    body { margin: 0; font-family: sans-serif; color: #1a1a1a; }
+    body{ margin:0; font-family:sans-serif; color:#1a1a1a; }
 
     /* ───── Sticky moving ticker ───── */
-    .ticker-bar {
-      position: sticky; top: 0; z-index: 9999;
-      height: 40px; width: 100%; overflow: hidden;
-      background: #facc15; color: #000; font-weight: 800;
-      border-bottom: 2px solid #000; white-space: nowrap;
+    .ticker-bar{
+      position:sticky; top:0; z-index:9999;
+      height:40px; width:100%; overflow:hidden;
+      background:#facc15; color:#000; font-weight:800;
+      border-bottom:2px solid #000; white-space:nowrap;
     }
-    .ticker-track {
-      display: inline-block;
-      padding-left: 100%;
-      animation: ticker-scroll 25s linear infinite;
+    .ticker-track{
+      display:inline-block;
+      padding-left:100%;
+      animation:ticker-scroll 25s linear infinite;
     }
-    .ticker-item {
-      display: inline-block; padding: 0 4rem;
-      line-height: 40px; font-size: 1rem;
+    .ticker-item{
+      display:inline-block; padding:0 4rem;
+      line-height:40px; font-size:1rem;
     }
-    @keyframes ticker-scroll {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-100%); }
+    @keyframes ticker-scroll{
+      0%{ transform:translateX(0) }
+      100%{ transform:translateX(-100%) }
     }
 
-    section {
-      width: 100%;
-      min-height: 100dvh;
-      display: flex; justify-content: center; align-items: center;
-      background-color: var(--desert);
-      scroll-snap-align: start;
-      position: relative; padding: 0;
+    section{
+      width:100%;
+      min-height:100dvh;
+      display:flex; justify-content:center; align-items:center;
+      background-color:var(--desert);
+      scroll-snap-align:start;
+      position:relative; padding:0;
     }
 
     /* ───── Page 1 hero + sandbox ───── */
-    .hero-full { position: relative; width: 100%; height: 100dvh; }
-    .hero-full > img {
-      width: 100%; height: 100%;
-      display: block; object-fit: fill;
+    .hero-full{ position:relative; width:100%; height:100dvh; }
+    .hero-full > img{
+      width:100%; height:100%;
+      display:block; object-fit:fill;
     }
 
-    .dapp-sandbox {
-      position: absolute; top: 50%; right: 24px; transform: translateY(-50%);
-      width: var(--dapp-w); height: var(--dapp-h);
-      min-width: 360px; min-height: 520px;
-      border-radius: 22px; padding: 14px;
+    .dapp-sandbox{
+      position:absolute; top:50%; right:24px; transform:translateY(-50%);
+      width:var(--dapp-w); height:var(--dapp-h);
+      min-width:360px; min-height:520px;
+      border-radius:22px; padding:14px;
       background:
         linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.75)),
         url("assets/General backgroud.png") center/cover no-repeat;
-      border: 4px solid var(--sand);
-      box-shadow: 0 24px 50px rgba(0,0,0,0.28), inset 0 0 0 2px rgba(140,91,42,0.18);
-      display: flex; flex-direction: column; overflow: hidden;
+      border:4px solid var(--sand);
+      box-shadow:0 24px 50px rgba(0,0,0,0.28), inset 0 0 0 2px rgba(140,91,42,0.18);
+      display:flex; flex-direction:column; overflow:hidden;
     }
-    .dapp-header {
-      display: flex; align-items: center; justify-content: center;
-      gap: 10px; padding: 8px 10px;
-      background: linear-gradient(90deg, #7f1d1d, #b91c1c, #7f1d1d);
-      border: 2px solid #facc15; border-radius: 14px;
-      color: #facc15; font-weight: 900; font-size: 1.1rem; letter-spacing: 1px;
-      text-transform: uppercase;
-      text-shadow: 0 0 6px #000, 0 0 12px #dc2626;
-      animation: pulseGlow 2s infinite;
-      z-index: 2;
+    .dapp-header{
+      display:flex; align-items:center; justify-content:center;
+      gap:10px; padding:8px 10px;
+      background:linear-gradient(90deg, #7f1d1d, #b91c1c, #7f1d1d);
+      border:2px solid #facc15; border-radius:14px;
+      color:#facc15; font-weight:900; font-size:1.1rem; letter-spacing:1px;
+      text-transform:uppercase;
+      text-shadow:0 0 6px #000, 0 0 12px #dc2626;
+      animation:pulseGlow 2s infinite;
+      z-index:2;
     }
-    @keyframes pulseGlow {
-      0%,100% { text-shadow: 0 0 6px #000, 0 0 12px #dc2626; }
-      50% { text-shadow: 0 0 10px #000, 0 0 20px #f87171; }
+    @keyframes pulseGlow{
+      0%,100%{ text-shadow:0 0 6px #000, 0 0 12px #dc2626; }
+      50%{ text-shadow:0 0 10px #000, 0 0 20px #f87171; }
     }
-    .dapp-frame {
-      flex: 1 1 auto; width: 100%;
-      border: 0; border-radius: 12px; margin-top: 10px;
-      background: rgba(255,255,255,0.85);
-      box-shadow: inset 0 0 0 1px rgba(140,91,42,0.15);
+    .dapp-frame{
+      flex:1 1 auto; width:100%;
+      border:0; border-radius:12px; margin-top:10px;
+      background:rgba(255,255,255,0.85);
+      box-shadow:inset 0 0 0 1px rgba(140,91,42,0.15);
     }
 
     /* ───── Other pages ───── */
-    .page { background-color: var(--desert); padding: 0; display: flex; flex-direction: column; justify-content: center; align-items: center; }
-    .page img { max-width: 100%; height: auto; display: block; border: 0; outline: 0; box-shadow: none; }
+    .page{ background-color:var(--desert); padding:0; display:flex; flex-direction:column; justify-content:center; align-items:center; }
+    .page img{ max-width:100%; height:auto; display:block; border:0; outline:0; box-shadow:none; }
 
     /* ───── LAST PAGE: left-middle icon strip ───── */
-    .page.last-page { position: relative; }
-    .last-icons {
-      position: absolute;
-      left: 16px;
-      top: 50%;
+    .page.last-page{ position:relative; }
+    .last-icons{
+      position:absolute;
+      left:16px;
+      top:50%;
       transform: translateY(-50%);
-      display: flex;
-      flex-direction: column;
-      gap: 14px;
-      z-index: 10;
+      display:flex;
+      flex-direction:column;
+      gap:14px;
+      z-index:10;
     }
 
-    /* ✅ Force all six buttons into identical boxes */
-    .icon-btn { display: inline-block; background: transparent; border: 0; }
-    .icon-btn img {
-      width: 230px;
-      height: 80px;
-      object-fit: contain;   /* keeps logo inside without stretching */
-      background: #fff;       /* fills empty space if aspect ratio differs */
-      border-radius: 8px;     /* optional: unify look */
-      display: block;
+    /* All buttons identical size */
+    .icon-btn{ display:inline-block; background:transparent; border:0; }
+    .icon-btn img{
+      width:240px; 
+      height:80px;
+      object-fit:contain;
+      display:block;
     }
 
-    @media (max-width: 768px) {
-      .last-icons { top: 42%; left: 12px; }
+    @media (max-width: 768px){
+      .last-icons{ top:42%; left:12px; }
     }
-    @media (max-width: 980px) {
-      :root { --dapp-w: 92vw; --dapp-h: 68vh; }
-      .dapp-sandbox { right: 50%; transform: translate(50%, 0); top: auto; bottom: 14px; min-width: 0; }
+    @media (max-width: 980px){
+      :root{ --dapp-w: 92vw; --dapp-h: 68vh; }
+      .dapp-sandbox{ right:50%; transform:translate(50%, 0); top:auto; bottom:14px; min-width:0; }
     }
 
     /* ===== COIN RAIN ===== */
-    .coin-rain {
+    .coin-rain{
       position: fixed;
       inset: 0;
       pointer-events: none;
       overflow: hidden;
       z-index: 10000;
     }
-    .coin {
+    .coin{
       position: absolute;
       top: -20vh;
       width: 48px; height: 48px;
@@ -148,13 +146,13 @@
       animation-fill-mode: forwards;
       filter: drop-shadow(0 2px 4px rgba(0,0,0,.35));
     }
-    @keyframes fallSpin {
+    @keyframes fallSpin{
       0%   { transform: translateY(-20vh) rotate(0deg); opacity: 0; }
       10%  { opacity: .85; }
       100% { transform: translateY(120vh) rotate(360deg); opacity: .85; }
     }
     @media (prefers-reduced-motion: reduce){
-      .coin { animation: none; }
+      .coin{ animation: none; }
     }
   </style>
 </head>
