--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,10 +27,16 @@
     html,body{height:100%}
     body{
       margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      color:#e5edf5; background:
+      color:#e5edf5;
+      /* default background if no ?file is provided */
+      background:
         radial-gradient(1200px 600px at 10% -20%, #14202e 0%, transparent 60%),
         radial-gradient(1200px 600px at 110% 120%, #211937 0%, transparent 60%),
         var(--bg);
+      background-attachment: fixed, fixed, fixed;
+      background-repeat: no-repeat;
+      background-position: center, center, center;
+      background-size: cover, cover, auto;
     }
     .wrap{max-width:1040px; margin:0 auto; padding:28px 16px 64px}
     header{
@@ -93,6 +98,7 @@
     .notice{
       font-size:12px; color:#a3b4c8; background:rgba(34,211,238,.08);
       border:1px solid rgba(34,211,238,.25); padding:10px 12px; border-radius:10px;
+      word-break: break-word;
     }
     footer{margin-top:28px; text-align:center; color:#93a2b1; font-size:12px}
   </style>
@@ -180,6 +186,48 @@
   </div>
 
   <script>
+    // ====== DYNAMIC BACKGROUND FROM ?file= OR ?bg= ======
+    (function applyDynamicBackground(){
+      const params = new URLSearchParams(location.search);
+      const titleParam = params.get('title');
+      if (titleParam) {
+        document.title = `${titleParam} — SAAD $SQ8 Dashboard`;
+      }
+
+      const fileParam = params.get('file') || params.get('bg');
+      if (!fileParam) return;
+
+      // Safety: keep within /assets
+      let path = fileParam.trim();
+      // allow raw filename like "dashboard.png"
+      if (!/^assets\//i.test(path)) {
+        path = 'assets/' + path.replace(/^\/+/, '');
+      }
+
+      // Preload to avoid flashing broken bg
+      const img = new Image();
+      img.onload = () => {
+        // Place the image as the bottom-most layer, then your gradients, then base color.
+        document.body.style.background =
+          `url("${path}") center / cover no-repeat fixed,` +
+          `radial-gradient(1200px 600px at 10% -20%, #14202e 0%, transparent 60%),` +
+          `radial-gradient(1200px 600px at 110% 120%, #211937 0%, transparent 60%),` +
+          `var(--bg)`;
+        document.body.style.backgroundAttachment = 'fixed, fixed, fixed, fixed';
+        document.body.style.backgroundRepeat = 'no-repeat, no-repeat, no-repeat, no-repeat';
+        document.body.style.backgroundPosition = 'center, center, center, center';
+        document.body.style.backgroundSize = 'cover, cover, cover, auto';
+      };
+      img.onerror = () => {
+        const note = document.getElementById('note');
+        if (note) {
+          note.style.display = 'block';
+          note.textContent = `Background image not found: ${path}`;
+        }
+      };
+      img.src = path;
+    })();
+
     // ====== CONFIG ======
     const CHAIN_ID_HEX = "0x2105"; // Base mainnet 8453
     const RPC_URL = "https://mainnet.base.org";
