--- a/dashboard.html
+++ b/dashboard.html
@@ -25,13 +25,14 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-   body {
+ body {
   margin:0;
   font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
   color:#e5edf5;
-  background: transparent; /* ✅ Let page bg-image show fully */
+  background:
+    radial-gradient(1200px 600px at 10% -20%, rgba(20,32,46,0.6) 0%, transparent 60%),
+    radial-gradient(1200px 600px at 110% 120%, rgba(33,25,55,0.6) 0%, transparent 60%);
 }
-
       background-attachment: fixed, fixed, fixed;
       background-repeat: no-repeat;
       background-position: center, center, center;
