--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,8 @@
       --warn:#f59e0b;
       --bad:#ef4444;
       --ring: rgba(34,211,238,.25);
+      --panel-bg: rgba(18,23,32,0.28);   /* more transparent so bg art shows */
+      --panel-br: rgba(255,255,255,.14);
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -26,47 +28,65 @@
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
       color:#e5edf5;
+      background: transparent; /* we paint the bg image via JS below */
+    }
+
+    /* Layout is narrower so the art is visible */
+    .wrap{
+      max-width: 760px;         /* smaller than before */
+      margin: 0 auto;
+      padding: 20px 12px 40px;
       background: transparent;
     }
-    .wrap{max-width:1040px; margin:0 auto; padding:28px 16px 64px}
-    header{
-      display:flex; align-items:center; justify-content:space-between; gap:16px; margin-bottom:18px;
+    /* Extra-compact mode via ?compact=1 */
+    .wrap.compact{
+      max-width: 560px;
+      padding: 16px 10px 32px;
     }
-    .brand{display:flex; align-items:center; gap:12px; font-weight:800}
-    .brand img{width:40px; height:40px; display:block}
+
+    header{
+      display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:14px;
+    }
+    .brand{display:flex; align-items:center; gap:10px; font-weight:800}
+    .brand img{width:36px; height:36px; display:block}
     .brand h1{
       font-size:20px; margin:0;
       color:#ff1a1a; /* 🔥 Red title */
+      text-shadow: 0 2px 10px rgba(0,0,0,.35);
     }
-    .net-pill{font-size:12px; color:#111; background:#a7f3d0; border-radius:999px; padding:4px 10px; font-weight:800}
+    .net-pill{
+      font-size:12px; color:#111; background:#a7f3d0; border-radius:999px; padding:4px 10px; font-weight:800
+    }
+
     .card{
-      background:rgba(18, 23, 32, 0.35);
-      border:1px solid rgba(255,255,255,.15);
-      border-radius:16px; padding:16px;
-      box-shadow:0 10px 40px rgba(0,0,0,.35);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      background: var(--panel-bg);
+      border:1px solid var(--panel-br);
+      border-radius:16px; padding:12px;
+      box-shadow:0 10px 40px rgba(0,0,0,.30);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
     }
-    .grid{display:grid; grid-template-columns: repeat(12,1fr); gap:14px;}
+
+    .grid{display:grid; grid-template-columns: repeat(12,1fr); gap:12px;}
     .col-12{grid-column: span 12;}
     .col-6{grid-column: span 6;}
     @media (max-width: 860px){.col-6{grid-column: span 12;}}
 
     .btn{
-      border:0; cursor:pointer; border-radius:12px; padding:12px 14px;
-      background: rgba(255,255,255,0.1);
-      color:#e6f1fb; font-weight:800;
+      border:0; cursor:pointer; border-radius:12px; padding:10px 12px;
+      background: rgba(255,255,255,0.12);
+      color:#e6f1fb; font-weight:800; font-size:14px;
       border:1px solid rgba(255,255,255,.2);
-      backdrop-filter: blur(6px);
-      transition:.18s transform ease, .18s box-shadow ease;
+      backdrop-filter: blur(4px);
+      transition:.18s transform ease, .18s box-shadow ease, .18s background ease;
     }
     .btn.primary{
       background:linear-gradient(90deg, var(--primary), #06b6d4);
       color:#001015;
     }
+    .btn.small{padding:7px 10px; font-size:12px}
     .btn:hover{transform:translateY(-1px)}
     .btn:active{transform:translateY(0)}
-    .btn.small{padding:8px 10px; font-size:12px}
 
     .row{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
     .muted{color:var(--muted)}
@@ -77,26 +97,34 @@
     .pill.bad{background:rgba(239,68,68,.25); color:#ffd9d9}
 
     .kpi{
-      display:flex; flex-direction:column; gap:4px; padding:14px; border-radius:12px;
-      background: rgba(255,255,255,.08);
-      border:1px solid rgba(255,255,255,.15);
-      backdrop-filter: blur(8px);
+      display:flex; flex-direction:column; gap:4px; padding:12px; border-radius:12px;
+      background: rgba(255,255,255,.06);
+      border:1px solid rgba(255,255,255,.14);
+      backdrop-filter: blur(6px);
     }
     .kpi .label{font-size:12px; color:var(--muted)}
-    .kpi .val{font-size:22px; font-weight:900}
+    .kpi .val{
+      font-size:20px; font-weight:900;
+      transition: color .15s ease;
+    }
+    .kpi .val.nonzero{
+      color:#ff3b3b;             /* 🔴 KPI turns red when > 0 */
+      text-shadow: 0 1px 10px rgba(255, 59, 59, .25);
+    }
 
-    .hr{height:1px; background: linear-gradient(90deg, transparent, rgba(255,255,255,.3), transparent); margin:14px 0}
+    .hr{height:1px; background: linear-gradient(90deg, transparent, rgba(255,255,255,.28), transparent); margin:12px 0}
     .notice{
       font-size:12px; color:#d1e4ff;
       background:rgba(34,211,238,.12);
       border:1px solid rgba(34,211,238,.25);
       padding:10px 12px; border-radius:10px;
+      word-break: break-word;
     }
-    footer{margin-top:28px; text-align:center; color:#93a2b1; font-size:12px}
+    footer{margin-top:22px; text-align:center; color:#93a2b1; font-size:12px}
   </style>
 </head>
 <body>
-  <div class="wrap">
+  <div id="wrap" class="wrap">
     <header>
       <div class="brand">
         <img src="assets/coin.png" alt="SQ8">
@@ -127,21 +155,50 @@
         <div class="hr"></div>
 
         <div class="grid">
-          <div class="col-6"><div class="kpi"><div class="label">Total Purchased</div><div id="kpiTotal" class="val">0 SQ8</div></div></div>
-          <div class="col-6"><div class="kpi"><div class="label">Unlocked</div><div id="kpiUnlocked" class="val">0 SQ8</div></div></div>
-          <div class="col-6"><div class="kpi"><div class="label">Claimed</div><div id="kpiClaimed" class="val">0 SQ8</div></div></div>
-          <div class="col-6"><div class="kpi"><div class="label">Claimable Now</div><div id="kpiClaimable" class="val">0 SQ8</div></div></div>
+          <div class="col-6">
+            <div class="kpi">
+              <div class="label">Total Purchased (locked + claimed)</div>
+              <div id="kpiTotal" class="val">0 SQ8</div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="kpi">
+              <div class="label">Unlocked</div>
+              <div id="kpiUnlocked" class="val">0 SQ8</div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="kpi">
+              <div class="label">Claimed</div>
+              <div id="kpiClaimed" class="val">0 SQ8</div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="kpi">
+              <div class="label">Claimable Now</div>
+              <div id="kpiClaimable" class="val">0 SQ8</div>
+            </div>
+          </div>
         </div>
 
         <div class="hr"></div>
 
-        <div class="row" style="gap:16px; align-items:flex-end;">
-          <div><div class="muted" style="font-size:12px;">Cliff (min)</div><div id="kpiCliff" class="mono">—</div></div>
-          <div><div class="muted" style="font-size:12px;">Duration (min)</div><div id="kpiDuration" class="mono">—</div></div>
-          <div><div class="muted" style="font-size:12px;">Claim start (UTC)</div><div id="kpiStart" class="mono">—</div></div>
+        <div class="row" style="gap:14px; align-items:flex-end;">
+          <div>
+            <div class="muted" style="font-size:12px;">Cliff (min)</div>
+            <div id="kpiCliff" class="mono">—</div>
+          </div>
+          <div>
+            <div class="muted" style="font-size:12px;">Duration (min)</div>
+            <div id="kpiDuration" class="mono">—</div>
+          </div>
+          <div>
+            <div class="muted" style="font-size:12px;">Claim start (UTC)</div>
+            <div id="kpiStart" class="mono">—</div>
+          </div>
         </div>
 
-        <div id="note" class="notice" style="margin-top:14px; display:none;"></div>
+        <div id="note" class="notice" style="margin-top:12px; display:none;"></div>
       </div>
     </div>
 
@@ -152,7 +209,11 @@
     // ====== BACKGROUND IMAGE LOADER ======
     (function applyDynamicBackground(){
       const params = new URLSearchParams(location.search);
-      const fileParam = params.get('file') || params.get('bg') || "assets/dashboard.png"; // default fallback
+      const titleParam = params.get('title');
+      if (titleParam) document.title = `${titleParam} — SAAD $SQ8 Dashboard`;
+
+      // default to assets/dashboard.png if not provided
+      const fileParam = params.get('file') || params.get('bg') || "assets/dashboard.png";
 
       const img = new Image();
       img.onload = () => {
@@ -167,6 +228,11 @@
         }
       };
       img.src = fileParam;
+
+      // Compact mode: add ?compact=1 to shrink the panel further
+      if (params.get('compact') === '1') {
+        document.getElementById('wrap')?.classList.add('compact');
+      }
     })();
 
     // ====== CONFIG ======
@@ -174,6 +240,7 @@
     const RPC_URL = "https://mainnet.base.org";
     const PRESALE_ADDRESS = "0x00ab2677723295F2d0A79cb68E1893f9707B409D";
 
+    // Minimal ABI to fetch vesting info
     const PRESALE_ABI = [
       "function owner() view returns (address)",
       "function vestingInfo(address) view returns (uint256 total, uint256 alreadyClaimed, uint256 unlocked, uint256 claimable, uint256 _claimStart, uint256 _cliff, uint256 _duration)"
@@ -200,6 +267,12 @@
       $status.className = "pill " + (kind || "ok");
     }
 
+    function setKPI($el, wei){
+      const num = Number(wei);
+      $el.textContent = fmt18(wei) + " SQ8";
+      if (num > 0) $el.classList.add("nonzero"); else $el.classList.remove("nonzero");
+    }
+
     async function ensureBase(){
       if (!window.ethereum) throw new Error("No injected wallet.");
       const provider = new ethers.BrowserProvider(window.ethereum);
@@ -211,7 +284,13 @@
         if (e && e.code === 4902){
           await window.ethereum.request({
             method:"wallet_addEthereumChain",
-            params:[{chainId: CHAIN_ID_HEX, chainName:"Base", nativeCurrency:{ name:"Base Ether", symbol:"ETH", decimals:18 }, rpcUrls:[RPC_URL], blockExplorerUrls:["https://basescan.org"]}]
+            params:[{
+              chainId: CHAIN_ID_HEX,
+              chainName:"Base",
+              nativeCurrency:{ name:"Base Ether", symbol:"ETH", decimals:18 },
+              rpcUrls:[RPC_URL],
+              blockExplorerUrls:["https://basescan.org"]
+            }]
           });
         } else { throw e; }
       }
@@ -240,15 +319,23 @@
       try{
         const provider = existingProvider || await ensureBase();
         const addr = existingAddr || (await (await provider.getSigner()).getAddress());
+
         const contract = new ethers.Contract(PRESALE_ADDRESS, PRESALE_ABI, provider);
         const v = await contract.vestingInfo(addr);
-        $kTotal.textContent     = fmt18(v.total) + " SQ8";
-        $kClaimed.textContent   = fmt18(v.alreadyClaimed) + " SQ8";
-        $kUnlocked.textContent  = fmt18(v.unlocked) + " SQ8";
-        $kClaimable.textContent = fmt18(v.claimable) + " SQ8";
-        $kCliff.textContent = (Number(v._cliff)/60).toLocaleString() + " min";
-        $kDur.textContent   = (Number(v._duration)/60).toLocaleString() + " min";
-        $kStart.textContent = v._claimStart ? new Date(Number(v._claimStart)*1000).toISOString().replace(".000","").replace("T"," ")+" UTC" : "—";
+
+        setKPI($kTotal,     v.total);
+        setKPI($kUnlocked,  v.unlocked);
+        setKPI($kClaimed,   v.alreadyClaimed);
+        setKPI($kClaimable, v.claimable);
+
+        const start = Number(v._claimStart||0);
+        const cliff = Number(v._cliff||0);
+        const dur   = Number(v._duration||0);
+
+        $kCliff.textContent = (cliff/60).toLocaleString() + " min";
+        $kDur.textContent   = (dur/60).toLocaleString() + " min";
+        $kStart.textContent = start ? new Date(start*1000).toISOString().replace(".000","").replace("T"," ")+" UTC" : "—";
+
         $note.style.display = "none";
       }catch(e){
         console.error(e);
@@ -259,6 +346,22 @@
 
     $btnConnect.addEventListener("click", connect);
     $btnRefresh.addEventListener("click", () => connect());
+
+    // Optional: auto-connect if authorized
+    (async () => {
+      if (window.ethereum){
+        try{
+          const accounts = await window.ethereum.request({ method:"eth_accounts" });
+          if (accounts && accounts.length){
+            await connect();
+          }
+        }catch{}
+        window.ethereum.on?.("chainChanged", () => connect());
+        window.ethereum.on?.("accountsChanged", () => connect());
+      } else {
+        setStatus("Install Wallet", "warn");
+      }
+    })();
   </script>
 </body>
 </html>
